# lumenchatbot

./: .dockerignore  .editorconfig  .gitignore  BOT_BUILD_FIX.md  COOLIFY_ALTERNATIVE_SOLUTION.md  COOLIFY_BASE_DIRECTORY_FIX.md  COOLIFY_BOT_CORRECT_SETTINGS.md  COOLIFY_BOT_FINAL_SOLUTION.md  COOLIFY_BOT_MATCH_BACKEND.md  COOLIFY_BOT_SETTINGS.md  COOLIFY_BUILD_CONTEXT_CRITICAL.md  COOLIFY_BUILD_CONTEXT_FIX.md  COOLIFY_BUILD_CONTEXT_SOLUTION.md  COOLIFY_FINAL_FIX.md  COOLIFY_FIND_BUILD_CONTEXT.md  COOLIFY_SETUP.md  COOLIFY_STEP_BY_STEP.md  COOLIFY_URGENT_FIX.md  DEPLOY.md  DEPLOY_CHECKLIST.md  Dockerfile  Dockerfile.bot  Makefile  README.md  SETUP_SUMMARY.txt  SYSTEM_IMPROVEMENTS.md  UI_IMPROVEMENTS.md  URGENT_COOLIFY_FIX.md  build.sh  compose.yaml  docker-compose.yml  lumenpay.db  pyproject.toml
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20241110_01_initial.py  20241111_01_add_subscription_plans.py  20241111_02_add_invite_link_to_channels.py  20241112_01_update_broadcasts.py  20241113_01_add_phone_number_to_users.py  20251113_01_create_channels.py  20251113_02_create_admins.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/background/: __init__.py  backups.py  broadcasts.py  payments.py  scheduler.py  subscriptions.py
backend/app/core/: config.py  crypto.py  logging.py  rate_limit.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/integrations/: __init__.py  yookassa.py
backend/app/models/: __init__.py  access_log.py  admin.py  bot.py  bot_message.py  channel.py  payment.py  payment_provider_credential.py  promo_code.py  scheduled_broadcast.py  subscription.py  subscription_plan.py  user.py
backend/app/schemas/: __init__.py  admin.py  auth.py  base.py  bot.py  broadcast.py  channel.py  payment.py  promo_code.py  settings.py  subscription.py  subscription_plan.py  user.py
backend/app/services/: SUBSCRIPTION_FIX_INSTRUCTIONS.md  SUBSCRIPTION_FIX_README.md  __init__.py  admins.py  analytics.py  backups.py  bots.py  broadcasts.py  channel_access.py  channels.py  notifications.py  payment_providers.py  payments.py  promo_codes.py  subscription_fix_variant1.py  subscription_fix_variant2.py  subscription_fix_variant3.py  subscription_fix_variant_a.py  subscription_fix_variant_b.py  subscription_fix_variant_c.py  subscription_plans.py  user_notifications.py  users.py
backend/app/utils/: __init__.py  validators.py
bot/: Dockerfile
(+106 files in other folders)
